fixed issue with footer not sticking to bottom on smaller screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -565,9 +565,6 @@ a.btn.btn-blog:hover {
 	.header-container {
 		padding-top: 116px;
 	}
-	body {
-		height: calc(100vh - 116px);
-	}
 	.form-inline .search-field {
 		display: inline-block;
 		width: 80%;
